# Spec2Test

./: .bandit  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BUGFIX_SUMMARY.md  DEPLOYMENT.md  Dockerfile  ENVIRONMENT_SETUP.md  Makefile  README.md  TESTING_GUIDE.md  TEST_README.md  alembic.ini  api_workflow_test_results.json  docker-compose.yml  main.py  mypy.ini  project_structure.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  sample_small_api.json  test.yaml  test_analysis_report.md  test_api_workflow.py  test_summary.py
.dev/: LLM抽象层重构-清理完成.md  变更记录-并发配置.md  开发TodoList.md  开发进度记录.md  异步任务系统设计.md  技术架构设计.md  数据库配置指南.md  阶段1.1.1-创建项目目录结构-开发结果.md  阶段1.1.2-创建基础配置文件-开发结果.md  阶段1.2.1-核心配置模块-开发结果.md  阶段1.2.2-基础工具模块-开发结果.md  阶段2.1-数据库基础设置-开发结果.md  阶段2.2-核心数据模型-开发结果.md  阶段2.3-数据验证模式-开发结果.md  阶段2.4-数据库迁移-开发结果.md  阶段3.1-共享组件开发-开发结果.md  阶段3.2-存储抽象层-开发结果.md  阶段3.3-HTTP客户端-开发结果.md  阶段4.1-文档分析模块-开发结果.md  阶段4.2-测试生成模块-开发结果.md  阶段4.3-测试执行模块-开发结果.md  阶段4.4-结果分析模块-开发结果.md  阶段5-API接口层-开发结果.md  阶段6-异步任务系统优化-开发结果.md  阶段7-测试层开发完成总结.md  阶段8-部署配置开发完成总结.md  项目结构-更新.md
.doc/: PRD_Spec2Test.md  后端架构设计.md  环境变量配置指南.md
.promptx/: pouch.json
.promptx/resource/: project.registry.json
.promptx/resource/role/spec2test-python-expert/: spec2test-python-expert.role.md
.promptx/resource/role/spec2test-python-expert/execution/: development-result-template.execution.md  spec2test-development-workflow.execution.md
.promptx/resource/role/spec2test-python-expert/knowledge/: spec2test-technical-stack.knowledge.md
.promptx/resource/role/structured-programmer/: structured-programmer.role.md
alembic/: env.py
alembic/versions/: 001_initial_tables.py  ed43ae3cbf15_initial_migration.py
app/: __init__.py  cli.py  config.py  database.py  dependencies.py  main.py
app/api/: __init__.py  middleware.py
app/api/v1/: __init__.py  api.py  router.py
app/api/v1/endpoints/: __init__.py  analyses.py  analyzer.py  documents.py  executor.py  generator.py  parser.py  reporter.py  reports.py  tasks.py  tests.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  ai_generator.py  config.py  database.py  db_models.py  models.py  prompts.py  quality_control.py
app/core/document_analyzer/: __init__.py  analyzer.py  chunker.py  models.py  parser.py  validator.py  validator_backup.py
app/core/llm/: __init__.py  gemini_client.py  schema_manager.py  structured_output.py
app/core/parser/: __init__.py  openapi_parser.py
app/core/report_analyzer/: __init__.py  analyzer.py  models.py  reporter.py  visualizer.py
app/core/schemas/: __init__.py  analysis.py  base.py  gemini_schemas.py  generation.py  validation.py
app/core/shared/config/: __init__.py  settings.py
app/core/shared/http/: __init__.py  auth.py  client.py  performance.py
app/core/shared/llm/: __init__.py  base.py  factory.py  gemini_client.py  langchain_client.py  models.py
app/core/shared/storage/: __init__.py  base.py  cache_storage.py  db_storage.py  factory.py  file_storage.py
app/core/shared/utils/: __init__.py  exceptions.py  helpers.py  logger.py
app/core/tasks/: __init__.py  context.py  database.py  executors.py  lifecycle.py  manager.py  models.py  monitor.py  optimization.py  retry.py  storage.py  timeout.py
app/core/test_executor/: __init__.py  http_client.py  models.py  runner.py  scheduler.py
app/core/test_generator/: __init__.py  case_generator.py  concurrent_generator.py  models.py  prompt_builder.py
app/models/: __init__.py  base.py  document.py  report.py  test_case.py  test_result.py
app/schemas/: __init__.py  document.py  report.py  test_case.py  test_result.py
app/utils/: __init__.py  exceptions.py  helpers.py  logger.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  nginx.conf  prometheus.yml
docs/: API_TESTING_GUIDE.md  CODE_QUALITY.md  DOCKER_SETUP.md  ENVIRONMENT_SETUP.md  FEATURES.md  GEMINI_TESTING.md  PHASE1_COMPLETION_SUMMARY.md  PRD.md  RELEASE_NOTES.md  TODOLIST.md
examples/: sample_api.json
examples/analysis_results/: analysis_report.json  analysis_report.md
examples/test_generation_results/: simple_test_result.json
scripts/: api-validation.py  check-env.py  comprehensive-validation.sh  create_migration.py  demo_document_analysis.py  demo_test_execution.py  demo_test_generation.py  docker-start.sh  docker-stop.sh  format-code.sh  health_check.py  init-db.sql  init-ollama.sh  init_db.py  init_db.sql  quality-check.sh  quick-validation.sh  quick-verify.sh  run-tests-docker.sh  run_all_tests.py  start-dev.sh  start-local-dev.sh  stop-dev.sh  test_analyzer_api.py  test_concurrent_config.py  test_concurrent_optimization.py  test_concurrent_performance.py  test_database_basic.py  test_database_connection.py  test_document_analyzer.py  test_executor_integration.py  test_gemini_structured_output.py  test_generation_simple.py  test_llm_integration.py  test_migration.py  test_models.py  test_new_api.py  test_simple_api.py  test_storage_integration.py  test_test_executor.py  (+2 more)
tests/: __init__.py  conftest.py  test_config.py  test_schemas.py  test_utils.py  utils.py
tests/compatibility/: test_api_compatibility.py
tests/fixtures/: __init__.py  poor_quality_openapi.yaml  sample_markdown.md  sample_openapi.json  sample_openapi.yaml
tests/integration/: test_document_upload.py  test_error_scenarios.py  test_gemini_real_api.py
tests/integration/test_api/: __init__.py  test_document_endpoints.py
tests/integration/test_workflows/: __init__.py  test_complete_workflow.py
tests/performance/: test_load_testing.py
tests/test_tasks/: __init__.py  conftest.py  test_manager.py  test_models.py  test_retry.py  test_storage.py
tests/unit/: test_gemini_client.py  test_openapi_parser.py  test_schema_management.py
tests/unit/test_document_analyzer/: __init__.py  test_chunker.py  test_parser.py  test_validator.py
tests/unit/test_report_analyzer/: __init__.py  test_analyzer.py
tests/unit/test_test_executor/: __init__.py  test_executor.py
tests/unit/test_test_generator/: __init__.py  test_generator.py
(+3 files in other folders)
